--- a/vite-project/package.json
+++ b/vite-project/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.6.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.22.0",
     "tailwindcss": "^3.4.1",
     "zustand": "^4.5.0"
